# surf-forecast

./: .gitignore  Dockerfile  README.md  deploy.sh  north_star.md  pyproject.toml  report.md  roadmap.md  tasks.md
.kiro/hooks/: refresh-data.kiro.hook  validate-report.kiro.hook
.kiro/steering/: domain-knowledge.md  product.md  structure.md  tech.md
config/: thresholds.yaml
docs/: ISURF-功能规格参考.md  TASK_PROGRESS.md  UI优化-01-功能介绍.md  UI优化-02-交互操作指南.md  UI优化-03-教学教程.md  agentcore-refactor-design.md  codelens-feature-dev-sop.md  codelens-meshclaw-integration.md  custom-spots-visual-and-estimate.md  deployment-runbook.md  kiro-development-guide.md  migration-notes-v1-to-v2.md  production-gap-analysis.md  production-goal.md  ui-decrowding-2026-07-08.md  形态C-01-功能介绍.md  形态C-02-交互操作指南.md  形态C-03-教学教程.md  石老人整合方案-formC.md  移植功能-01-功能介绍.md  移植功能-02-交互操作指南.md  移植功能-03-教学教程.md
iac/terraform/: dev.tfvars.example  main.tf  outputs.tf  variables.tf  versions.tf
prompts/: analysis-prompt-original.md  analysis-prompt-short.md
reference/data/: shilaoren_spots.json
src/web/: db.py  (+11 more)
templates/: report.md.j2
tests/: test_analyze.py  test_cache_read.py  test_config.py  test_dynamo_store.py  test_feedback.py  test_fetch.py  test_formc.py  test_formc_task8.py  test_golden.py  test_models.py  test_narrative.py  test_physics.py  test_refresh.py  test_refresh_cli.py  test_render.py  test_scoring.py  test_spots_api.py  test_spots_cache.py  test_spots_model.py  test_spots_refresh.py  test_validate.py  test_web.py
tools/: import_shilaoren_spots.py  load_registry.py
web/: 浪报MVP.html
(+46 files in other folders)
