[project]
name = "surf-forecast-analyzer"
version = "0.1.0"
description = "冲浪浪报深度分析器 — 把多日海浪预报转化为逐日可执行的冲浪行动报告"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "fastapi>=0.110", "uvicorn>=0.29", "argon2-cffi>=23.1", "httpx>=0.27", "boto3>=1.34", "moto[dynamodb]>=5.0"]
web = ["fastapi>=0.110", "uvicorn>=0.29", "argon2-cffi>=23.1", "boto3>=1.34", "PyJWT>=2.8"]

[project.scripts]
surf-forecast = "surf_forecast.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
